feat: implement multi-copy catalog ingestion, luxury physical copies status tracker, and curator shelf inventory audit with automatic reconciliation